refactor : 로또 번호 하나하나를 뜻하는 LottoNumber 생성